Feat(LOCAT-BE-18): Setup projects
Signed-off-by: SeongHo5 <newfuring1123@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -60,4 +60,6 @@ src/generated/
 
 ### Properties ###
 **/main/resources/certificates
-**/main/resources/application-*.yaml
+
+### Local Development ###
+docker-compose.yaml
