--- a/.github/workflows/sync-api-docs.yaml
+++ b/.github/workflows/sync-api-docs.yaml
@@ -7,6 +7,10 @@ on:
     paths:
       - 'docs/api/**/*.yaml'
 
+concurrency:
+  group: sync-api-docs
+  cancel-in-progress: true
+
 jobs:
   synchronize:
     runs-on: ubuntu-latest
