--- a/.github/workflows/pr-reminder.yaml
+++ b/.github/workflows/pr-reminder.yaml
@@ -12,7 +12,7 @@ jobs:
 
     steps:
       - name: Run PR reminder
-        uses: SeongHo5/pr-reminder@v1.3
+        uses: SeongHo5/pr-reminder@latest
         with:
           platform: discord
           webhook-url: ${{ secrets.WEBHOOK_URL }}
