--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,9 @@ src/generated/
 
 ### Local Development ###
 docker-compose.yaml
+
+### DS_Store ###
+.DS_Store
+._.DS_Store
+**/.DS_Store
+**/._.DS_Store
