Fix(LOCAT-BE-38): Adjust permission level
- 워크플로우의 권한 수준 조정

--- a/.github/workflows/pr-reminder.yaml
+++ b/.github/workflows/pr-reminder.yaml
@@ -1,14 +1,14 @@
 name: PR Reminder
 
 on:
+  workflow_dispatch:
   schedule:
     - cron: '0 8 * * *' # KST 17시(UTC 8시)에 실행
 
 jobs:
   pr-reminder:
     runs-on: ubuntu-latest
-    permissions:
-      pull-requests: read
+    permissions: read-all
 
     steps:
       - name: Run PR reminder
@@ -17,4 +17,3 @@ jobs:
           platform: discord
           webhook-url: ${{ secrets.WEBHOOK_URL }}
           remind-time: 24
-
