Fix(LOCAT-BE-38): Resolve Reminder issues

--- a/.github/workflows/pr-reminder.yaml
+++ b/.github/workflows/pr-reminder.yaml
@@ -17,3 +17,4 @@ jobs:
           platform: discord
           webhook-url: ${{ secrets.WEBHOOK_URL }}
           remind-time: 24
+          repo-token: ${{ secrets.ADMIN_PAT }}
