--- a/.github/workflows/locat-CD.yaml
+++ b/.github/workflows/locat-CD.yaml
@@ -13,19 +13,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set deployment variables
+      - name: Set properties for CD
         run: |
-          if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
-            echo "ENV=prod" >> $GITHUB_ENV
-            echo "APP_PROPERTIES=${{ secrets.APPLICATION_PROD }}" >> $GITHUB_ENV
-          else
-            echo "Branch name should be either 'develop' or 'main'"
-            core.setFailed('Branch name should be either "develop" or "main"')
-            exit 1
-          fi
-          echo "Preparing properties for ${{ env.ENV }}"
-          touch ./src/main/resources/application-${{ env.ENV }}.yaml
-          echo "${{ env.APP_PROPERTIES }}" > ./src/main/resources/application-${{ env.ENV }}.yaml
+          touch ./src/main/resources/application-develop.yaml
+          touch ./src/main/resources/application-prod.yaml
+          echo ${{ secrets.APPLICATION_DEVELOP }} > ./src/main/resources/application-develop.yaml
+          echo ${{ secrets.APPLICATION_PROD }} > ./src/main/resources/application-prod.yaml
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
