--- a/.github/workflows/locat-CD.yaml
+++ b/.github/workflows/locat-CD.yaml
@@ -7,8 +7,7 @@ on:
 jobs:
   locat-CD:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
+    permissions: read-all
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -17,6 +16,7 @@ jobs:
         run: |
           echo ${{ secrets.APPLICATION_DEVELOP }} > ./src/main/resources/application-develop.yaml
           echo ${{ secrets.APPLICATION_PROD }} > ./src/main/resources/application-prod.yaml
+        continue-on-error: true
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
