Feat(LOCAT-BE-25: CI/CD pipeline 구축 (#4)
* Feat(LOCAT-BE-25): Add CI/CD Pipeline

* Feat(LOCAT-BE-25): Add docker script

---------

Co-authored-by: SeongHo5 <newfuring1123@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,9 @@ src/generated/
 
 ### Local Development ###
 docker-compose.yaml
+
+### Misc ###
+.DS_Store
+._.DS_Store
+**/.DS_Store
+**/._.DS_Store
