--- a/docs/v1_user.yaml
+++ b/docs/v1_user.yaml
@@ -173,7 +173,7 @@ paths:
         '400':
           description: Bad request. Invalid parameters or missing required fields.
         '401':
-          description: Unauthorized. Authentication is required to create a user.
+          description: Unauthorized.
         '404':
           description: User not found
         '500':
@@ -202,9 +202,9 @@ paths:
               schema:
                 $ref: '#/components/schemas/User'
         '400':
-          description: Bad request. Invalid user data or missing required fields.
+          description: Bad request. Invalid parameters or missing required fields.
         '401':
-          description: Unauthorized. Authentication is required to create a user.
+          description: Unauthorized.
         '404':
           description: User not found
         '500':
@@ -223,9 +223,9 @@ paths:
         '204':
           description: User deleted successfully
         '400':
-          description: Bad request. Invalid user data or missing required fields.
+          description: Bad request. Invalid parameters or missing required fields.
         '401':
-          description: Unauthorized. Authentication is required to create a user.
+          description: Unauthorized.
         '404':
           description: User not found
         '500':
@@ -252,9 +252,9 @@ paths:
                 items:
                   $ref: '#/components/schemas/UserSetting'
         '400':
-          description: Bad request. Invalid user data or missing required fields.
+          description: Bad request. Invalid parameters or missing required fields.
         '401':
-          description: Unauthorized. Authentication is required to create a user.
+          description: Unauthorized.
         '404':
           description: User not found
         '500':
@@ -280,9 +280,9 @@ paths:
                 items:
                   $ref: '#/components/schemas/UserTermsAgreement'
         '400':
-          description: Bad request. Invalid user data or missing required fields.
+          description: Bad request. Invalid parameters or missing required fields.
         '401':
-          description: Unauthorized. Authentication is required to create a user.
+          description: Unauthorized.
         '404':
           description: User not found
         '500':
@@ -301,6 +301,14 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/UserWithdrawalLog'
+        '400':
+          description: Bad request. Invalid parameters or missing required fields.
+        '401':
+          description: Unauthorized.
+        '500':
+          description: Internal server error. An unexpected condition was encountered.
+      security:
+        - bearerAuth: [ ]
     post:
       summary: Create a new user withdrawal log
       requestBody:
@@ -316,6 +324,11 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/UserWithdrawalLog'
+        '400':
+          description: Bad request. Invalid parameters or missing required fields.
+        '500':
+          description: Internal server error. An unexpected condition was encountered.
+
   /user-withdrawal-logs/{id}:
     get:
       summary: Retrieve a user withdrawal log by ID
@@ -332,8 +345,16 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/UserWithdrawalLog'
+        '400':
+          description: Bad request. Invalid data or missing required fields.
+        '401':
+          description: Unauthorized.
         '404':
           description: User withdrawal log not found
+        '500':
+          description: Internal server error. An unexpected condition was encountered.
+      security:
+        - bearerAuth: [ ]
     delete:
       summary: Delete a user withdrawal log by ID
       parameters:
@@ -345,5 +366,9 @@ paths:
       responses:
         '204':
           description: User withdrawal log deleted successfully
+        '400':
+          description: Bad request. Invalid parameters or missing required fields.
         '404':
           description: User withdrawal log not found
+        '500':
+          description: Internal server error. An unexpected condition was encountered.
