--- a/docs/v1_user.yaml
+++ b/docs/v1_user.yaml
@@ -180,7 +180,7 @@ paths:
           description: Internal server error. An unexpected condition was encountered.
       security:
         - bearerAuth: [ ]
-    put:
+    patch:
       summary: Update a user by ID
       parameters:
         - name: id
@@ -232,7 +232,6 @@ paths:
           description: Internal server error. An unexpected condition was encountered.
       security:
         - bearerAuth: [ ]
-  # 여기서부터는 필요한지 확인 필요.
   /users/{id}/settings:
     get:
       summary: Retrieve settings for a specific user
