--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,8 @@ out/
 ### Querydsl ###
 src/generated/
 
+### OpenAPI ###
+docs/**/schemas.yaml
 
 ### Properties ###
 **/main/resources/certificates
