Docs(LOCAT-BE-46): Update API Docs
- 파라미터 오류로 인한 실패 케이스 설명 추가

--- a/docs/api/v1_faq.yaml
+++ b/docs/api/v1_faq.yaml
@@ -30,6 +30,8 @@ paths:
       responses:
         200:
           $ref: "#/components/responses/FaqResponse"
+        400:
+          description: "Bad Request: type 입력이 잘못된 경우"
 components:
   responses:
     FaqResponse:
