--- a/.github/workflows/locat-CI.yaml
+++ b/.github/workflows/locat-CI.yaml
@@ -40,7 +40,7 @@ jobs:
         run: |
           echo ${{ secrets.APPLICATION_DEVELOP }} > ./src/main/resources/application-develop.yaml
           echo ${{ secrets.APPLICATION_PROD }} > ./src/main/resources/application-prod.yaml
-        continue-on-error: true
+        # continue-on-error: true
 
       - name: Build & Test with Gradle
         run: ./gradlew clean build
