Fix(LOCAT-BE-49): Fix geo item color codes

--- a/docs/api/v1_user.yaml
+++ b/docs/api/v1_user.yaml
@@ -92,6 +92,7 @@ paths:
             application/json:
               schema:
                 $ref: "schemas.yaml#/components/schemas/ErrorResponse"
+  /v1/users/me/delete:
     put:
       summary: 사용자 탈퇴 요청 API
       security:
