--- a/docs/api/v1_found.yaml
+++ b/docs/api/v1_found.yaml
@@ -41,17 +41,11 @@ paths:
           schema:
             type: number
             example: 1000
-        - name: s
+        - name: sort
           in: query
-          description: "정렬 기준(Non-Case Sensitive) / 기본 정렬: 등록일 내림차순"
+          description: "정렬 기준({정렬할 필드},{방향}) / 기본 정렬: 등록일 내림차순"
           required: false
-          schema:
-            enum:
-              - "CREATED_AT_ASC"
-              - "CREATED_AT_DESC"
-              - "FOUND_AT_ASC"
-              - "FOUND_AT_DESC"
-            example: "CREATED_AT_DESC"
+          example: "createdAt,desc / id,asc / foundAt,asc"
       responses:
         200:
           $ref: "#/components/responses/FoundItemLocationResponse"
