Fix(LOCAT-BE-49): Fix swagger grammar error

--- a/docs/api/v1_user.yaml
+++ b/docs/api/v1_user.yaml
@@ -14,11 +14,7 @@ paths:
         $ref: '#/components/requestBodies/UserRegisterRequest'
       responses:
         201:
-          description: "사용자 등록 성공"
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/responses/LocatTokenDto'
+          $ref: '#/components/responses/LocatTokenDto'
         400:
           description: "Bad request: 필수 요청 파라미터 누락(반드시 동의해야하는 약관에 미동의 등)"
           content:
@@ -44,11 +40,7 @@ paths:
         - bearerAuth: [ ]
       responses:
         200:
-          description: "사용자 정보 조회 성공"
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/responses/UserInfoResponse'
+          $ref: '#/components/responses/UserInfoResponse'
         401:
           description: "Unauthorized: 토큰이 유효하지 않음"
           content:
@@ -69,11 +61,7 @@ paths:
         $ref: '#/components/requestBodies/UserInfoUpdateRequest'
       responses:
         200:
-          description: "사용자 정보 수정 성공(수정된 사용자 정보 응답)"
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/responses/UserInfoResponse'
+          $ref: '#/components/responses/UserInfoResponse'
         400:
           description: "Bad request: 필수 요청 파라미터 누락"
           content:
@@ -200,7 +188,7 @@ components:
                   data:
                     $ref: "#/components/schemas/UserInfoResponse"
     LocatTokenDto:
-      description: "JWT 발급 응답"
+      description: "회원 등록 성공 응답(JWT 발급)"
       content:
         application/json:
           schema:
