--- a/docs/api/v1_found.yaml
+++ b/docs/api/v1_found.yaml
@@ -36,11 +36,25 @@ paths:
             example: 127.051
         - name: r
           in: query
-          description: "검색 반경(단위: m) / 기본값: 500"
+          description: "검색 반경(단위: m) / 기본값: 50"
           required: false
           schema:
             type: number
             example: 1000
+        - name: page
+          in: query
+          description: "페이지 번호(1부터 시작) / 기본값: 1"
+          required: false
+          schema:
+            type: integer
+            example: 1
+        - name: size
+          in: query
+          description: "페이지 크기 / 기본값: 10"
+          required: false
+          schema:
+            type: integer
+            example: 10
         - name: sort
           in: query
           description: "정렬 기준({정렬할 필드},{방향}) / 기본 정렬: 등록일 내림차순"
@@ -98,6 +112,22 @@ paths:
       responses:
         200:
           $ref: "#/components/responses/FoundItemDetailResponse"
+  /v1/items/founds/{id}/matched-count:
+    get:
+      summary: "매칭된 아이템 카운트 조회 API"
+      security:
+        - bearerAuth: [ ]
+      parameters:
+        - name: id
+          in: path
+          description: "습득물 ID"
+          required: true
+          schema:
+            type: integer
+            example: 2
+      responses:
+        200:
+          $ref: "#/components/responses/FoundItemMatchedCountResponse"
 components:
   requestBodies:
     FoundItemRegisterRequest:
@@ -106,6 +136,19 @@ components:
           schema:
             $ref: "#/components/schemas/FoundItemRegisterRequest"
   responses:
+    FoundItemMatchedCountResponse:
+      description: "매칭 조건에 맞는 분실물 개수 응답"
+      content:
+        application/json:
+          schema:
+            allOf:
+              - $ref: "schemas.yaml#/components/schemas/BaseResponse"
+              - type: object
+                properties:
+                  data:
+                    type: integer
+                    example: 3
+                    description: "매칭 조건에 맞는 분실물 개수"
     FoundItemLocationResponse:
       description: "습득물 위치 정보 응답(목록 조회 시 등에 사용)"
       content:
