--- a/.github/workflows/locat-CI.yaml
+++ b/.github/workflows/locat-CI.yaml
@@ -38,8 +38,13 @@ jobs:
 
       - name: Set properties for CI
         run: |
-          echo ${{ secrets.APPLICATION_DEVELOP }} > ./src/main/resources/application-develop.yaml
-          echo ${{ secrets.APPLICATION_PROD }} > ./src/main/resources/application-prod.yaml
+          cat <<EOF > ./src/main/resources/application-develop.yaml
+          ${{ secrets.APPLICATION_DEVELOP }}
+          EOF
+          cat <<EOF > ./src/main/resources/application-prod.yaml
+          ${{ secrets.APPLICATION_PROD }}
+          EOF
+
 
       - name: Build & Test with Gradle
         run: ./gradlew clean build -x test
