--- a/.github/workflows/locat-CI.yaml
+++ b/.github/workflows/locat-CI.yaml
@@ -45,10 +45,8 @@ jobs:
           ${{ secrets.APPLICATION_PROD }}
           EOF
 
-
       - name: Build & Test with Gradle
-        run: ./gradlew clean build -x test
-#        continue-on-error: true
+        run: ./gradlew clean build
 
 #      알림 설정
 #      - name: Notify Discord on Test Failure
@@ -59,7 +57,7 @@ jobs:
 #          message: "⚠️ Tests failed in the CI pipeline!"
 
       - name: Jacoco Report to PR
-        uses: madrapps/jacoco-report@v1.6.1
+        uses: madrapps/jacoco-report@v1.7.1
         if: success()
         with:
           paths: ${{ github.workspace }}/build/reports/jacoco/xml
