Fix(LOCAT-BE-38): Fix CI
- jacocoReport 경로 수정

--- a/.github/workflows/locat-CI.yaml
+++ b/.github/workflows/locat-CI.yaml
@@ -60,7 +60,7 @@ jobs:
         uses: madrapps/jacoco-report@v1.7.1
         if: success()
         with:
-          paths: ${{ github.workspace }}/build/reports/jacoco/xml
+          paths: ${{ github.workspace }}/build/reports/jacoco/xml/jacocoTestReport.xml
           token: ${{ secrets.GITHUB_TOKEN }}
           title: "⭐Coverage Report"
           update-comment: true
