--- a/.github/workflows/locat-CI.yaml
+++ b/.github/workflows/locat-CI.yaml
@@ -6,7 +6,7 @@ on:
     types: [ opened, reopened, synchronize, ready_for_review ]
 
 jobs:
-  locat-CI:
+  LOCAT-CI:
     runs-on: ubuntu-latest
     permissions: write-all
 
@@ -64,6 +64,9 @@ jobs:
           title: "⭐Coverage Report"
           update-comment: true
           skip-if-no-changes: true
+          min-coverage-overall: '70'
+          debug-mode: 'true'
+
 
       - name: Upload jacoco Report
         uses: actions/upload-artifact@v4
